Updated config and readme with the flag examples and updated values.

--- a/static/config.json
+++ b/static/config.json
@@ -6,7 +6,7 @@
 		"description": "$$DESCRIPTION$$"
 	},
 	"default": {
-		"input": "$$INPUT$$",
+		"input": "README.md",
 		"path": "result",
 		"title": "Docs",
 		"author": "Project Author",
