--- a/static/config.json
+++ b/static/config.json
@@ -1,22 +1,22 @@
 {
-	"placeholder": {
-		"content": "$$CONTENT$$",
-		"title": "$$TITLE$$",
-		"author": "$$AUTHOR$$",
-		"description": "$$DESCRIPTION$$"
-	},
-	"default": {
-		"input": "README.md",
-		"path": "result",
-		"title": "Docs",
-		"author": "Project Author",
-		"description": "Documentation of an awesome project."
-	},
-	"help": {
-		"input": "The input Markdown file to be processed.",
-		"path": "The path to export the resulting files.",
-		"title": "Title of the documentation page.",
-		"author": "Author of the project to place in the 'author' meta tag.",
-		"description": "Description of the project to place in the 'description' meta tag."
-	}
+  "placeholder": {
+      "content": "$$CONTENT$$",
+      "title": "$$TITLE$$",
+      "author": "$$AUTHOR$$",
+      "description": "$$DESCRIPTION$$"
+  },
+  "default": {
+      "input": "README.md",
+      "path": "docs",
+      "title": "Docs",
+      "author": "Project Author",
+      "description": "Documentation of an awesome project."
+  },
+  "help": {
+      "input": "The input Markdown file to be processed.",
+      "path": "The path to export the resulting files.",
+      "title": "Title of the documentation page.",
+      "author": "Author of the project to place in the 'author' meta tag.",
+      "description": "Description of the project to place in the 'description' meta tag."
+  }
 }
